# bday-service

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 33e0d2b0b2a6_create_users_table.py
bday-service/: app.py
bday_service/: app.py
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  helpers.tpl  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
tests/: test_main.py
